Closed
Bug 862808
Opened 12 years ago
Closed 12 years ago
Local Video is upside down on Android when in portrait mode
Categories
(Core :: WebRTC: Audio/Video, defect)
Tracking
()
VERIFIED
FIXED
mozilla24
People
(Reporter: standard8, Assigned: gcp)
References
Details
(Whiteboard: [getUserMedia][android-gum+][blocking-gum-])
Attachments
(1 file)
2.43 KB,
patch
|
jesup
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Using the demo at https://webrtc-demo.vcap.mozillalabs.com/ when in a video call, the video for the Android device is displayed upside down on both the Android and the Desktop display.
Tested on a Nexus 4.
Assignee | ||
Comment 2•12 years ago
|
||
I think this is only for the back cam, but with permissions disabled you can't choose any other :P
Comment 3•12 years ago
|
||
Sounds like a cut and dry blocker for gUM on Android.
Whiteboard: [getUserMedia][android-gum+]
Comment 4•12 years ago
|
||
STR :: https://simpl.info/getusermedia/
--
Nightly (04/17) w/related prefs enabled
LG Nexus 4 (Android 4.2.2)
Assignee | ||
Comment 5•12 years ago
|
||
FWIW, for these kind of bugs it's going to be really helpful to check whether the bug exists on multiple devices. Also, the subject implies this is only true in portait mode. Is it?
Assignee | ||
Comment 6•12 years ago
|
||
>Also, the subject implies this is only true in portait mode. Is it?
Well darn, it is. That's...not what I would have expected.
Updated•12 years ago
|
Whiteboard: [getUserMedia][android-gum+] → [getUserMedia][android-gum+][blocking-gum-]
Assignee | ||
Updated•12 years ago
|
Blocks: android-webrtc
Assignee | ||
Comment 7•12 years ago
|
||
The "compensate the mirror" thing came from the Android docs:
http://developer.android.com/reference/android/hardware/Camera.html#setDisplayOrientation%28int%29
"So the users can see themselves as looking into a mirror."
However, we don't use setDisplayOrientation and show the image that is actually sent to the remote, which doesn't use "mirror" orientation (wtf would you want *that* anyway?).
Tested this on a Nexus 4 to give the correct result in all orientations/cameras.
Attachment #751668 -
Flags: review?(rjesup)
Updated•12 years ago
|
Attachment #751668 -
Flags: review?(rjesup) → review+
Assignee | ||
Comment 8•12 years ago
|
||
Comment 9•12 years ago
|
||
Assignee: nobody → gpascutto
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Assignee | ||
Comment 10•12 years ago
|
||
Comment on attachment 751668 [details] [diff] [review]
Patch 1. Fix rotation amount calculation
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 750010 and friends
User impact if declined: Stiff neck.
Testing completed (on m-c, etc.): Landed on m-c a few days ago.
Risk to taking this patch (and alternatives if risky): Little risk, change in preffed-off feature.
Attachment #751668 -
Flags: approval-mozilla-aurora?
Updated•12 years ago
|
Updated•12 years ago
|
status-firefox23:
--- → affected
tracking-firefox23:
--- → +
Updated•12 years ago
|
Attachment #751668 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 11•12 years ago
|
||
Updated•12 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•