Bug 862808 - Local Video is upside down on Android when in portrait mode. r=jesup